# app-streaming

./: .clang-format  .gitignore  .gitmodules  Dockerfile  README.md  docker-native.sh  docker.sh  elf.py  instrumentation.md  merkle.py  merkletree.py  native.Dockerfile  risc-v.md  rust.Dockerfile  stream.py
.github/workflows/: apps.yml  build-packages.yml  vm.yml
app/: .gitignore  CMakeLists.txt  Makefile  dockcross-linux-riscv32-latest  glyphs.c  glyphs.h  sdk.c  sdk.h  sha256sum.c  start.S  std.c  test.c
app-vm/: Makefile
app-vm/src/: apdu.h  cpu.c  ecall.c  ecall.h  ecall_bolos.c  error.h  glyphs.c  glyphs.h  io.c  lfsr.c  lfsr.h  loading.c  loading.h  main.c  merkle.c  merkle.h  rv.h  rv_cpu.h  stream.c  stream.h  types.h  ui.c  ui.h
app/app-boilerplate/: CMakeLists.txt  app-boilerplate.c  app-boilerplate.h  message.proto  message_pb2.py  plugin-boilerplate.py
app/app-boilerplate/protobuf/: message.pb-c.c  message.pb-c.h  message.proto
app/app-boilerplate/src/: app-boilerplate.c  app-boilerplate.h  sign_tx.c  ui.c  ui.h
app/app-ethereum/: CMakeLists.txt  eth.py  plugin-ethereum.py
app/app-ethereum/protobuf/: message.options  message.pb-c.c  message.pb-c.h  message.pb.c  message.pb.h  message.proto  message_pb2.py
app/app-ethereum/src/: app-ethereum.c  app-ethereum.h  eip712.c  eip712.h  get_pubkey.c  rlp.c  rlp.h  sign.c  sign_eip712.c  sign_message.c  sign_tx.c  ui.c  ui.h  uint256.c  uint256.h  utils.c  version.c
app/app-ethereum/src/eip712/: CMakeLists.txt  example_mail.c  opensea.c
app/app-ethereum/tests/: CMakeLists.txt  fuzz_rlp.c  test_eip712.c  test_pubkey.c  test_sign_msg.c  test_utils.c
app/app-rust/: .gitignore  Cargo.toml  README.md
app/app-rust/.cargo/: config
app/app-rust/src/: currency.rs  error.rs  main.rs  partner.rs  swap.rs  ui.rs  version.rs
app/app-rust/src/btc/: mod.rs
app/app-rust/src/eth/: mod.rs
app/app-rust/src/ledger_swap/: ledger_swap.rs  mod.rs  swap.proto
app/app-rust/src/message/: message.proto  message.rs  mod.rs
app/app-rust/src/sdk/: crypto.rs  ecall.rs  glyphs.rs  mod.rs  ux.rs
app/app-sha256/: CMakeLists.txt  app-sha256.c  plugin-sha256.py  sha256.h  sha256.py  sha256sum.c
app/app-swap/: CMakeLists.txt  plugin-swap.py  swap.py
app/app-swap/protobuf/: message.options  message.pb.c  message.pb.h  message.proto  message_pb2.py  swap.options  swap.pb.c  swap.pb.h  swap_pb2.py
app/app-swap/src/: currency_config.c  currency_config.h  main.c  partner.c  sell.c  swap.c  swap.h  ui.c  version.c
app/app-swap/src/btc/: CMakeLists.txt  base58.c  base58.h  bcd.c  btc.c  btc.h  btchip_helpers.c  btchip_helpers.h  segwit.c  segwit.h
app/app-swap/src/eth/: CMakeLists.txt  eth.c  eth.h  sign_tx.c  tx.c  tx.h  utils.c
app/app-swap/tests/: CMakeLists.txt  test_eth_tx.c  test_swap.c
app/app-wip/: CMakeLists.txt  test.c
app/sdk/: CMakeLists.txt  crypto.c  crypto.h  ecall-common.h  ecall-nr.h  ecall.h  math.c  sdk.c  sdk.h  start.S  std.c  uint256.c  uint256.h
app/sdk/api/: ecall-nr.h  ecall-params.h  uint256.h
app/sdk/native/: ecall-hash.c  ecall-native.c  ecall-vm.c  ecall-vm.h  speculos.c  speculos.h  uint256-native.c  uint256-native.h
app/sdk/risc-v/: div.S  ecall-riscv.c  math.c  speculos.h  std.c
app/sdk/ux/: CMakeLists.txt  bagl.h  fonts.h  glyphs.c  glyphs.h  ux.c  ux.h  ux_display.c
app/ux/: CMakeLists.txt  Makefile  bagl.c  bagl_fonts.c  bagl_glyphs.c  config.h  default_glyphs.c  default_glyphs.h  glyphs.c  glyphs.h  io_seproxyhal.c  ux.h  ux_flow_engine.c  ux_flow_engine.h  ux_idea.c  ux_layout_bb.c  ux_layout_pb.c  ux_layout_pbb.c  ux_layout_pn.c  ux_layout_pnn.c  ux_layout_utils.c  ux_layouts.h  ux_stack.c
docs/: README.md  TODO.md  app-dev.md  app-encryption.md  build-native.md  encryption-overview.md  native.md  pros-and-cons.md  protobuf.md  risc-v.md  security.md  thread-model.md  threat-model.md
docs/notes/: risc-v.md
exapp-sdk/: .gitignore  Cargo.toml
exapp-sdk/.cargo/: config
exapp-sdk/lib/: create-lib.sh
exapp-sdk/src/: allocator.rs  crypto.rs  ecall.rs  glyphs.rs  lib.rs  ux.rs
host/: app.py  ble.py  client.py  comm.py  elf.py  encryption.py  hsm.py  manifest.py  merkle.py  merkletree.py  native.py  plugin.py  server.py  stream.py  stream_device.py  stream_native.py  streamer.py
host-rust/: Cargo.toml  test.py
host-rust/src/: app.rs  manifest.rs  merkletree.rs  speculos.rs  stream.rs
host-rust/src/app/: app.rs
host-rust/src/lib/: app.rs  comm.rs  lib.rs  merkletree.rs  serialization.rs  speculos.rs  stream.rs
host-rust/src/stream/: stream.rs
tools/: clang-format.sh  flame.sh  instrument-trace-to-folded.py  mypy.sh  update-library-symbols.py
vm/: .gitignore  Makefile  README.md
vm/src/: apdu.h  app_signature.c  cpu.c  ecall.c  ecall.h  ecall_bolos.c  ecall_dispatcher.c  ecall_hash.c  ecall_hash.h  error.h  general_handlers.c  instrument.c  io.c  io.h  key_exchange.c  keys.c  keys.h  lfsr.h  loading.c  loading.h  main.c  manifest.h  memory.c  memory.h  merkle.c  merkle.h  no_throw.c  no_throw.h  page.h  rv_cpu.h  stream.c  stream.h  ui.h  uint256-internal.h  uint256.c
vm/tests/: CMakeLists.txt  env.diff  mock_stream.c  test_memory.c  vm.c
