[package]
name = "app-streaming"
version = "0.1.0"
authors = ["greenknot"]

[[bin]]
name = "app"
path = "src/app.rs"

[dependencies]
hex = "0.4.3"
hex-literal = "0.3.4"
reqwest = { version = "0.11.11", features = [ "blocking", "json" ] }
rust-crypto = "0.2.36"
serde = { version = "1.0.138" , features = ["derive"] }
zip = "0.6.2"
