[package]
name = "app-streaming"
version = "0.1.0"
authors = ["greenknot"]

[lib]
name = "streaming"
path = "src/lib/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "app"
path = "src/app/app.rs"

[[bin]]
name = "stream"
path = "src/stream/stream.rs"

[dependencies]
cpython = "0.7.0"
hex = "0.4.3"
hex-literal = "0.3.4"
reqwest = { version = "0.11.11", features = [ "blocking", "json" ] }
rust-crypto = "0.2.36"
serde = { version = "1.0.138" , features = ["derive"] }
zip = "0.6.2"
