[package]
name = "foo"
version = "0.1.0"
authors = ["greenknot"]

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.*", default-features = false, features = ["derive", "alloc"] }
quick-protobuf = { version = "0.8.0", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
