[package]
name = "foo"
version = "0.1.0"
authors = ["greenknot"]

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
bech32 = { version = "0.9.0", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.3.4"
quick-protobuf = { version = "0.8.0", default-features = false }
serde = { version = "1.0.*", default-features = false, features = ["derive", "alloc"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
#codegen-units = 1
#lto = true
