if (NOT NATIVE)
  add_library(sdk
    crypto.c
    math.c
    risc-v/ecall-riscv.c
    risc-v/start.S
    risc-v/std.c
    sdk.c)
else()
  add_compile_options(-DNATIVE_64BITS)

  add_library(sdk
    crypto.c
    native/ecall-native.c
    sdk.c

    ${SPECULOS_DIR}/src/bolos/bagl.c
    ${SPECULOS_DIR}/src/bolos/cx_aes.c
    ${SPECULOS_DIR}/src/bolos/cx_aes_sdk2.c
    ${SPECULOS_DIR}/src/bolos/cx_blake2b.c
    ${SPECULOS_DIR}/src/bolos/cx_bn.c
    ${SPECULOS_DIR}/src/bolos/cx.c
    ${SPECULOS_DIR}/src/bolos/cx_crc.c
    ${SPECULOS_DIR}/src/bolos/cx_curve25519.c
    ${SPECULOS_DIR}/src/bolos/cx_ec.c
    ${SPECULOS_DIR}/src/bolos/cx_ec_domain.c
    ${SPECULOS_DIR}/src/bolos/cx_ecpoint.c
    ${SPECULOS_DIR}/src/bolos/cx_ed25519.c
    ${SPECULOS_DIR}/src/bolos/cx_hash.c
    ${SPECULOS_DIR}/src/bolos/cx_hkdf.c
    ${SPECULOS_DIR}/src/bolos/cx_hmac.c
    ${SPECULOS_DIR}/src/bolos/cxlib.c
    ${SPECULOS_DIR}/src/bolos/cx_math.c
    ${SPECULOS_DIR}/src/bolos/cx_montgomery.c
    ${SPECULOS_DIR}/src/bolos/cx_mpi.c
    ${SPECULOS_DIR}/src/bolos/cx_ripemd160.c
    ${SPECULOS_DIR}/src/bolos/cx_rng_rfc6979.c
    ${SPECULOS_DIR}/src/bolos/cx_scc.c
    ${SPECULOS_DIR}/src/bolos/cx_sha256.c
    ${SPECULOS_DIR}/src/bolos/cx_sha3.c
    ${SPECULOS_DIR}/src/bolos/cx_sha512.c
    ${SPECULOS_DIR}/src/bolos/cx_twisted_edwards.c
    ${SPECULOS_DIR}/src/bolos/cx_utils.c
    ${SPECULOS_DIR}/src/bolos/cx_weierstrass.c
    ${SPECULOS_DIR}/src/bolos/default.c
    ${SPECULOS_DIR}/src/bolos/endorsement.c
    ${SPECULOS_DIR}/src/bolos/os_1.2.c
    ${SPECULOS_DIR}/src/bolos/os_1.5.c
    ${SPECULOS_DIR}/src/bolos/os_1.6.c
    ${SPECULOS_DIR}/src/bolos/os_2.0.c
    ${SPECULOS_DIR}/src/bolos/os_bip32.c
    ${SPECULOS_DIR}/src/bolos/os.c
    ${SPECULOS_DIR}/src/bolos/os_eip2333.c
    ${SPECULOS_DIR}/src/bolos/seproxyhal.c
    )
endif()
